--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/edit-rtf-image.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/edit-rtf-image.tml
@@ -1,8 +1,3 @@
-<tml:action id="clearFilename">
-	tmlform.removefield("filename")
-	tmlform.removefield("alt")
-</tml:action>
-
 <tml:action id="app-changed">
 	tmlform.removefield("lang")
 	tmlform.removefield("container")
@@ -94,7 +89,7 @@
 							o_dbkey="{tmlform.dbkey=='this'?VOID:tmlform.dbkey}"
 							o_language="{tmlform.lang}"
 					>
-						<tml:option name="changeaction"><tml:action ref="clearFilename"/></tml:option>
+						<tml:option name="changeaction"><tml:action ref="$refresh"/></tml:option>
 					</tml:include>
 				</tml:[form-field]>
 
