--- a/OpenWGA/plugins/afw/design/scripts/css/jquery-lightbox.scss
+++ b/OpenWGA/plugins/afw/design/scripts/css/jquery-lightbox.scss
@@ -34,6 +34,8 @@
 	img {
 		max-width: none;
 		max-height: none;
+		position: absolute;
+		left: 10px;
 	}
 
 	.image-loading {
@@ -66,6 +68,7 @@
 		opacity: 0;
 		filter: alpha(opacity = 0);
 		box-sizing: content-box;
+		z-index: 1;
 		
 	}
 	
