#00005695: Module "image": added mobile swipe handler for lightbox

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/image.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/image.tml
@@ -192,7 +192,7 @@
 
 <tml:case condition="CMM.setting('onclick')=='zoom'">
 	<tml:[script]>
-		require(["jquery-lightbox"], function(){
+		require(["jquery-lightbox", "jquery-swipehandler"], function(){
 			$("#module-<tml:option name="ns"/> img").css("cursor", "pointer").lightbox({
 				group: "<tml:script expression="CMM.setting('image_group')||'default'"/>"
 			})
