#00005701: Module "tiles": added option to keep columns on mobile

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
@@ -6,9 +6,11 @@
 	},
 
 	">.tiles": {
-		display: "flex",
-		
 		margin: "0 -10px",
+		
+		"&.keep": {
+			display: "flex",		
+		},
 		
 		">.tile":{
 			box_sizing: "border-box",
