--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css-large.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css-large.tml
@@ -1,6 +1,7 @@
 <tml:include designdb="@afw" medium="jss" ref="toCSS" o_scope=".module-cm_tiles">
 
 	">.tiles": {
+		display: "flex",		
 		margin: "0 -15px",
 		">.tile":{
 			padding: "15px"
