#00005703: content module settings: show settings form in mode "readonly" instead of "view" if edit is not allowed.

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/content-modules.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/content-modules.tml
@@ -15,7 +15,7 @@
 	</tml:script>
 
 	<tml:include ref="::content-modules:main">
-		<tml:option name="mode" expression="_mayEdit ? 'edit':'view'"/>
+		<tml:option name="mode" expression="_mayEdit ? 'edit':'readonly'"/>
 	</tml:include>
 	
 </tml:form>
