#00005704: Module "google-map": don't render map if no api-key is defined

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/google-map/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/google-map/css.tml
@@ -29,6 +29,11 @@
 	color: black; 
 }
 
+.google-map .no-api-key{
+ 	margin: 50px;
+ 	text-align:center
+}
+
 .google-map img{
 	max-width: none !important;
 	max-height: none !important;
