#00005700: show module_classes in mode "readonly" instead of "view"

--- a/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/content-modules/portlet-module-settings.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/content-modules/portlet-module-settings.tml
@@ -151,18 +151,17 @@
 					<label><tml:label key="module-style"/></label>
 					<tml:case condition="_classes_classes.size()">
 						<div style="margin:10px">
-							<tml:input name="{WGA.scoped('module_css_classes', tmlform.mod_id)}" type="checkbox" optionsitem="_classes_classes" mode="{option:mode}"/>
+							<tml:input name="{WGA.scoped('module_css_classes', tmlform.mod_id)}" type="checkbox" optionsitem="_classes_classes" mode="{option('mode')=='view'?'readonly':option('mode')}"/>
 						</div>
 					</tml:case>
 					<tml:foreach item="_classes_options" currentvalue="_option">
 						<div style="margin:10px">
 							<tml:script>
-								console.log("_option", _option.values)
 								_label = _option.label;
 								_values = _option.values;
 							</tml:script>
 							<label><tml:item name="_label"/>:</label>
-							<tml:input name="{WGA.scoped('module_css_classes', tmlform.mod_id)}" type="select" optionsitem="_values" mode="{option:mode}"/>
+							<tml:input name="{WGA.scoped('module_css_classes', tmlform.mod_id)}" type="select" optionsitem="_values" mode="{option('mode')=='view'?'readonly':option('mode')}"/>
 						</div>
 					</tml:foreach>
 				</tml:case>					
