module_css in mode=view instead of mode=readonly

--- a/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/content-modules/portlet-module-settings.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/content-modules/portlet-module-settings.tml
@@ -151,7 +151,7 @@
 					<label><tml:label key="module-style"/></label>
 					<tml:case condition="_classes_classes.size()">
 						<div style="margin:10px">
-							<tml:input name="{WGA.scoped('module_css_classes', tmlform.mod_id)}" type="checkbox" optionsitem="_classes_classes" mode="{option('mode')=='view'?'readonly':option('mode')}"/>
+							<tml:input name="{WGA.scoped('module_css_classes', tmlform.mod_id)}" type="checkbox" optionsitem="_classes_classes" mode="{option:mode}"/>
 						</div>
 					</tml:case>
 					<tml:foreach item="_classes_options" currentvalue="_option">
@@ -161,7 +161,7 @@
 								_values = _option.values;
 							</tml:script>
 							<label><tml:item name="_label"/>:</label>
-							<tml:input name="{WGA.scoped('module_css_classes', tmlform.mod_id)}" type="select" optionsitem="_values" mode="{option('mode')=='view'?'readonly':option('mode')}"/>
+							<tml:input name="{WGA.scoped('module_css_classes', tmlform.mod_id)}" type="select" optionsitem="_values" mode="{option:mode}"/>
 						</div>
 					</tml:foreach>
 				</tml:case>					
