#00005709: Module "images": unable to render image from foreign content

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/image.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/image.tml
@@ -37,7 +37,8 @@
 	else {
 		c = context(
 			(CMM.setting("dbkey")!="this" ? "db:" + CMM.setting("dbkey") + "/" : "")
-			+ "docid:" + CMM.setting("sourcedoc") + "." + CMM.setting("lang") + ".0"
+			+ "docid:" + CMM.setting("sourcedoc") 
+			+ (CMM.setting("lang") ? "." + CMM.setting("lang") + ".0" : "")
 		, false);
 	}
 
