--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/delete-page.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/delete-page.tml
@@ -56,7 +56,7 @@
 						Die Website wird nicht mehr korrekt funktionieren, wenn Sie diese Seite löschen.
 					</div> 
 				</tml:case>
-				Möchten Sie die Seite "<tml:meta name="title"/>" inklusiver aller Inhlatsversionen und Unterseiten wirklich löschen?
+				Möchten Sie die Seite "<tml:meta name="title"/>" inklusiver aller Inhaltsversionen und Unterseiten wirklich löschen?
 			</div>
 			
 			<div class="footer">
