--- a/OpenWGA/plugins/afw/design/scripts/css/jquery-lightbox.scss
+++ b/OpenWGA/plugins/afw/design/scripts/css/jquery-lightbox.scss
@@ -24,7 +24,7 @@
 
 	z-index: 102;
 	position: fixed;
-	background: #efefef;
+	background: #e8e8e8;
 	color: black;
 	padding: 0px;
 	box-shadow: 0 0 15px gray;
@@ -68,9 +68,11 @@
 
 	.image-loading {
 		position: absolute;
-		top: 45%;
+		top: 40%;
 		width: 100%;
+		height: 100px;
 		text-align: center;
+		background: url(wga_file_url('tree', 'ajax-loader.gif')) no-repeat center center;
 	}
 
 	.image-prev, .image-next {
