--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/collections/layout/caroussel.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/collections/layout/caroussel.tml
@@ -68,8 +68,10 @@
 				</div>
 				<div class="date"><tml:script expression="date||PAGEPUBLISHED||MODIFIED" format="longdate"/></div>
 				<div>
-					<<tml:option name="news_headings"/>><tml:script expression="headline||TITLE"/></<tml:option name="news_headings"/>>
-					<div class="intro"><tml:script expression="intro||DESCRIPTION" encode="rtf"/></div>
+					<<tml:option name="news_headings"/>><tml:script expression="headline||WGA.encode('html',TITLE)"/></<tml:option name="news_headings"/>>
+					<div class="intro"><tml:script>
+						return intro ? WGA.encode("rtf", intro) : WGA.encode("html", DESCRIPTION) 
+					</tml:script></div>
 					<div class="more">
 						<tml:[util:link]><tml:label key="more"/> ...</tml:[util:link]>
 					</div>
